// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Onboarding should render correctly 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#3D065F",
      },
    ]
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flex": 1,
      }
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 30,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "rowGap": 24,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
                "rowGap": 32,
                "width": "100%",
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 240,
                  "justifyContent": "center",
                  "left": "50%",
                  "marginHorizontal": "auto",
                  "marginLeft": -120,
                  "marginTop": -120,
                  "padding": 40,
                  "position": "absolute",
                  "top": "50%",
                  "transform": [
                    {
                      "translateY": 0,
                    },
                  ],
                  "width": 240,
                }
              }
            >
              <View
                alignment="center"
                autoplay={false}
                fit="contain"
                source="mocked-wordmark-riv-file"
                stateMachine="WordmarkBuildUp"
                style={
                  {
                    "alignSelf": "center",
                    "height": 240,
                    "width": 240,
                  }
                }
                testID="metamask-wordmark-animation"
              />
            </View>
          </View>
          <View
            collapsable={false}
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "left": 36,
                "marginBottom": 16,
                "marginTop": 180,
                "opacity": 0,
                "position": "absolute",
                "right": 36,
                "rowGap": 16,
                "top": "50%",
                "transform": [
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#000000",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "bottom": -20,
        "height": 350,
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      alignment="center"
      autoplay={false}
      fit="contain"
      source="mocked-fox-riv-file"
      stateMachine="FoxRaiseUp"
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
      testID="fox-animation"
    />
  </View>
  <View />
</View>
`;

exports[`Onboarding should render correctly with android 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#3D065F",
      },
    ]
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flex": 1,
      }
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "rowGap": 16,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
                "rowGap": 24,
                "width": "100%",
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 180,
                  "justifyContent": "center",
                  "left": "50%",
                  "marginHorizontal": "auto",
                  "marginLeft": -90,
                  "marginTop": -90,
                  "padding": 30,
                  "position": "absolute",
                  "top": "50%",
                  "transform": [
                    {
                      "translateY": 0,
                    },
                  ],
                  "width": 180,
                }
              }
            >
              <View
                alignment="center"
                autoplay={false}
                fit="contain"
                source="mocked-wordmark-riv-file"
                stateMachine="WordmarkBuildUp"
                style={
                  {
                    "alignSelf": "center",
                    "height": 180,
                    "width": 180,
                  }
                }
                testID="metamask-wordmark-animation"
              />
            </View>
          </View>
          <View
            collapsable={false}
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "left": 26,
                "marginBottom": 16,
                "marginTop": 180,
                "opacity": 0,
                "position": "absolute",
                "right": 26,
                "rowGap": 12,
                "top": "50%",
                "transform": [
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#000000",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "bottom": -20,
        "height": 300,
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      alignment="center"
      autoplay={false}
      fit="contain"
      source="mocked-fox-riv-file"
      stateMachine="FoxRaiseUp"
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
      testID="fox-animation"
    />
  </View>
  <View />
</View>
`;

exports[`Onboarding should render correctly with large device and iphoneX 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#3D065F",
      },
    ]
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flex": 1,
      }
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 30,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "rowGap": 24,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
                "rowGap": 32,
                "width": "100%",
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 240,
                  "justifyContent": "center",
                  "left": "50%",
                  "marginHorizontal": "auto",
                  "marginLeft": -120,
                  "marginTop": -120,
                  "padding": 40,
                  "position": "absolute",
                  "top": "50%",
                  "transform": [
                    {
                      "translateY": 0,
                    },
                  ],
                  "width": 240,
                }
              }
            >
              <View
                alignment="center"
                autoplay={false}
                fit="contain"
                source="mocked-wordmark-riv-file"
                stateMachine="WordmarkBuildUp"
                style={
                  {
                    "alignSelf": "center",
                    "height": 240,
                    "width": 240,
                  }
                }
                testID="metamask-wordmark-animation"
              />
            </View>
          </View>
          <View
            collapsable={false}
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "left": 36,
                "marginBottom": 16,
                "marginTop": 180,
                "opacity": 0,
                "position": "absolute",
                "right": 36,
                "rowGap": 16,
                "top": "50%",
                "transform": [
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#000000",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "bottom": -20,
        "height": 350,
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      alignment="center"
      autoplay={false}
      fit="contain"
      source="mocked-fox-riv-file"
      stateMachine="FoxRaiseUp"
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
      testID="fox-animation"
    />
  </View>
  <View />
</View>
`;

exports[`Onboarding should render correctly with medium device and android 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#3D065F",
      },
    ]
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flex": 1,
      }
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "rowGap": 16,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
                "rowGap": 24,
                "width": "100%",
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 180,
                  "justifyContent": "center",
                  "left": "50%",
                  "marginHorizontal": "auto",
                  "marginLeft": -90,
                  "marginTop": -90,
                  "padding": 30,
                  "position": "absolute",
                  "top": "50%",
                  "transform": [
                    {
                      "translateY": 0,
                    },
                  ],
                  "width": 180,
                }
              }
            >
              <View
                alignment="center"
                autoplay={false}
                fit="contain"
                source="mocked-wordmark-riv-file"
                stateMachine="WordmarkBuildUp"
                style={
                  {
                    "alignSelf": "center",
                    "height": 180,
                    "width": 180,
                  }
                }
                testID="metamask-wordmark-animation"
              />
            </View>
          </View>
          <View
            collapsable={false}
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "left": 26,
                "marginBottom": 16,
                "marginTop": 180,
                "opacity": 0,
                "position": "absolute",
                "right": 26,
                "rowGap": 12,
                "top": "50%",
                "transform": [
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#000000",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Geist Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "bottom": -20,
        "height": 300,
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      alignment="center"
      autoplay={false}
      fit="contain"
      source="mocked-fox-riv-file"
      stateMachine="FoxRaiseUp"
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
      testID="fox-animation"
    />
  </View>
  <View />
</View>
`;
